k8s/todojob.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: datomspod-todojob
  name: datomspod-todojob
  namespace: datomspod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: datomspod-todojob
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: datomspod-todojob
    spec:
      containers:
      - env:
        #- name: AWS_ACCESS_KEY_ID
        #  value: somekey
        #- name: AWS_SECRET_ACCESS_KEY
        #  value: somesecret
        #- name: AWS_REGION
        #  value: us-east-1
        #- name: AWS_BUCKET_OUTPUT
        #  value: outputbucket
        #- name: AWS_BUCKET_ADMINLOGS
        #  value: adminbucket
        #- name: IPFS_OUTPUT
        #  value: http://youripfsserver:5001
        #- name: IPFS_OUTPUT_PREFIX
        #  value: http://youripfsserver:8080/ipfs/
        #- name: IPFS_ADMINLOGS
        #  value: http://youradminipfsserver:5001
        #- name: IPFS_ADMINLOGS_PREFIX
        #  value: http://youradminipfsserver:8080/ipfs/
        #- name: IPFS_EXPIRY_TIME
        #  value: "3600"
        #- name: IPFS_API_KEY
        #  value: "apikey"
        #- name: IPFS_API_CLIENT
        #  value: "clientid"
        - name: STORAGE_CLASS
          value: standard
        #- name: LOG_LEVEL
        #  value: DEBUG
        #- name: POD_CONFIGURATION_CONTAINER
        #  value: datomspod/pod-configuration:v1.0.10
        #- name: NOTIFY_START_URL
        #  value: http://yourserver/
        #- name: NOTIFY_STOP_URL
        #  value: http://yourserver/
        #- name: POD_PUBLISH_CONTAINER
        #  value: datomspod/pod-publishing:v1.0.1
        #- name: POD_DATOMS_CONTAINER
        #  value: datomspod/pod-datoms:v1.0.1
        image: atomsbeijing/datomspod:1.1.0
        imagePullPolicy: Always
        name: datomspod-todojob
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: datomspod-op
      serviceAccountName: datomspod-op
      terminationGracePeriodSeconds: 30
